@@ -240,7 +240,9 @@ CAGE=<ABILITY>\
 Usage    : CAGE [TARGET NAME] [CAGE ITEM]\n\r\
 Example  : cage rabbit wagon\n\r\
 The thief will attempt to get a sleeping or otherwise bound \
-or subdued animal into a cage for safe keeping.
+or subdued animal into a cage for safe keeping.  The cage door \
+must be closed afterwards.  If the door to a cage is left open, \
+the creatures inside may escape!
 
 CALLEDSTRIKE=CALLED_STRIKE
 CALLED_STRIKE=<ABILITY>\
