@@ -2156,4 +2156,6 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 21. MG Catalog Manager will now show "most popular" area for stuff, and allows sorting by column
 22. Common text files (intro.txt, newchar.txt, rules.txt, etc) are sent through webmacro system now -- add macros!
 23. Behavior MobReSave now saves/restores a mobs charstats.
-  
+24. Thief Mark skill can now unmark, BodyPiercing can now "heal" piercings, 
+    You can Leech yourself now, always Hide from sleeping mobs, and assassinate packs a larger punch.
+25. If a cage containing a mob is opened and left open -- the creature will now escape!
